# innerwarden

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SPEC.md  agent-ollama-test.toml  agent-test.toml  config.example.toml  config.test.toml  deny.toml  install.sh  registry.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  platform_support.yml
.github/workflows/: ci.yml  release.yml  security.yml  stale.yml  validate-modules.yml
brainstorm/innerwarden-draft/: Cargo.toml  README.md  config.example.toml
brainstorm/innerwarden-draft/docs/: format.md
crates/agent/: Cargo.toml
crates/agent/src/: abuseipdb.rs  allowlist.rs  cloudflare.rs  config.rs  correlation.rs  crowdsec.rs  dashboard.rs  data_retention.rs  decisions.rs  fail2ban.rs  geoip.rs  ioc.rs  main.rs  mesh.rs  narrative.rs  reader.rs  report.rs  slack.rs  telegram.rs  telemetry.rs  web_push.rs  webhook.rs
crates/agent/src/ai/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/agent/src/collectors/: journald.rs  mod.rs
crates/agent/src/sinks/: jsonl.rs  state.rs
crates/agent/src/skills/: mod.rs
crates/agent/src/skills/builtin/: block_container.rs  block_ip_iptables.rs  block_ip_nftables.rs  block_ip_pf.rs  block_ip_ufw.rs  honeypot.rs  kill_process.rs  mod.rs  monitor_ip.rs  rate_limit_nginx.rs  suspend_user_sudo.rs
crates/agent/src/skills/builtin/honeypot/: fake_shell.rs  http_interact.rs  mod.rs  ssh_interact.rs
crates/core/: Cargo.toml
crates/core/src/: entities.rs  event.rs  lib.rs
crates/core/src/policy/: mod.rs
crates/ctl/: Cargo.toml
crates/ctl/src/: capability.rs  config_editor.rs  main.rs  module_manifest.rs  module_package.rs  module_validator.rs  preflight.rs  scan.rs  sudoers.rs  systemd.rs  upgrade.rs
crates/ctl/src/capabilities/: ai.rs  block_ip.rs  mod.rs  search_protection.rs  shell_audit.rs  sudo_protection.rs
crates/sensor/: Cargo.toml
crates/sensor-ebpf/: Cargo.toml  test-load.rs  test-load.sh
crates/sensor-ebpf-types/: Cargo.toml
crates/sensor-ebpf-types/src/: lib.rs
crates/sensor-ebpf/src/: main.rs
crates/sensor/src/: config.rs  main.rs
crates/sensor/src/collectors/: auth_log.rs  cloudtrail.rs  docker.rs  ebpf_syscall.rs  exec_audit.rs  falco_log.rs  integrity.rs  journald.rs  macos_log.rs  mod.rs  nginx_access.rs  nginx_error.rs  osquery_log.rs  suricata_eve.rs  syslog_firewall.rs  wazuh_alerts.rs
crates/sensor/src/detectors/: c2_callback.rs  container_escape.rs  credential_stuffing.rs  distributed_ssh.rs  docker_anomaly.rs  execution_guard.rs  integrity_alert.rs  mod.rs  osquery_anomaly.rs  port_scan.rs  process_tree.rs  search_abuse.rs  ssh_bruteforce.rs  sudo_abuse.rs  suricata_alert.rs  user_agent_scanner.rs  web_scan.rs
crates/sensor/src/sinks/: jsonl.rs  mod.rs
docs/: agent-capabilities.md  configuration.md  format.md  index.md  integrated-setup.md  integration-recipes.md  module-authoring.md  phase-8-honeypot-real-rebuild.md  phase-8-honeypot-runtime-jail-trusted-handoff.md
docs/archive/: phase-7-honeypot-demo.md  phase-7-operational-telemetry.md  phase-7-rollout-hardening.md  phase-7-temporal-correlation.md  phase-8-honeypot-advanced-containment.md  phase-8-honeypot-hardening.md  phase-8-honeypot-medium-interaction.md  phase-8-honeypot-real-rebuild.md  phase-8-honeypot-rebuild-foundation.md  phase-8-honeypot-runtime-profile-attested-handoff.md  phase-8-honeypot-sandbox-runtime.md
docs/internal/: agent-capabilities.md  configuration.md  operations.md  sensor-capabilities.md
examples/cron/: innerwarden-narrate.cron
examples/systemd/: innerwarden-agent.service  innerwarden-sensor.service  innerwarden.service
integrations/: README.md
integrations/falco/: recipe.toml
integrations/openclaw/: SKILL.md
integrations/osquery/: recipe.toml
integrations/wazuh/: recipe.toml
local/: README.md
modules/abuseipdb-enrichment/: module.toml
modules/abuseipdb-enrichment/config/: agent.example.toml
modules/abuseipdb-enrichment/docs/: README.md
modules/cloudflare-integration/: module.toml
modules/cloudflare-integration/config/: agent.example.toml
modules/cloudflare-integration/docs/: README.md
modules/container-security/: module.toml
modules/container-security/config/: sensor.example.toml
modules/container-security/docs/: README.md
modules/crowdsec-integration/: module.toml
modules/crowdsec-integration/config/: agent.example.toml
modules/crowdsec-integration/docs/: README.md
modules/execution-guard/: module.toml
modules/execution-guard/config/: sensor.example.toml
modules/execution-guard/docs/: README.md
modules/fail2ban-integration/: module.toml
modules/fail2ban-integration/config/: agent.example.toml
modules/fail2ban-integration/docs/: README.md
modules/falco-integration/: module.toml
modules/falco-integration/config/: sensor.example.toml
modules/falco-integration/docs/: README.md
modules/file-integrity/: module.toml
modules/file-integrity/config/: agent.example.toml  sensor.example.toml
modules/file-integrity/docs/: README.md
modules/geoip-enrichment/: module.toml
modules/geoip-enrichment/config/: agent.example.toml
modules/geoip-enrichment/docs/: README.md
modules/network-defense/: module.toml
modules/nginx-error-monitor/: module.toml
modules/openclaw-protection/: module.toml
modules/osquery-integration/: module.toml
modules/search-protection/: module.toml
modules/slack-notify/: module.toml
modules/ssh-protection/: module.toml
modules/sudo-protection/: module.toml
modules/suricata-integration/: module.toml
modules/threat-capture/: module.toml
modules/wazuh-integration/: module.toml
scripts/: consistency_check.sh  model_benchmark.py  ops-check.sh  replay_qa.sh  rollout_smoke.sh
testdata/: sample-falco.jsonl  sample-osquery.jsonl  sample-suricata-eve.jsonl
testdata/watched/: sshd_config  sudoers
(+36 files in other folders)
