[workspace]
members = [
  "crates/core",
  "crates/sensor",
  "crates/agent",
  "crates/ctl",
  "crates/sensor-ebpf-types",
]
exclude = ["crates/sensor-ebpf"]
# crates/sensor-ebpf compiles to bpfel-unknown-none target (separate build)
resolver = "2"

[workspace.package]
version = "0.1.13"
edition = "2021"
license = "MIT"
repository = "https://github.com/InnerWarden/innerwarden"
homepage = "https://www.innerwarden.com"
readme = "README.md"
