[package]
name = "innerwarden-agent"
version.workspace = true
edition.workspace = true

[dependencies]
innerwarden_core = { path = "../core" }
anyhow = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
argon2 = "0.5"
base64 = "0.22"
rpassword = "7"
rand_core = { version = "0.6", features = ["std"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
russh = "0.46"

[dev-dependencies]
tempfile = "3"
