[package]
name = "innerwarden-ctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "InnerWarden control plane — manage capabilities and system configuration."
keywords = ["security", "linux", "capabilities", "rust"]
categories = ["command-line-utilities"]

[[bin]]
name = "innerwarden-ctl"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tempfile = "3"
toml_edit = "0.25"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"], default-features = false }
sha2 = { version = "0.10", features = ["std"] }
digest = "0.10"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
base64 = "0.22"
rand_core = { version = "0.6", features = ["std"] }
